tests/errors/lex_err01.kt
// nested comment error
/* Outer comment /* nested comment */ Outer comment continued */